<resources>
    <string name="app_name">MyGitHub</string>
    <string name="userId">ID User</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukakan Kata</string>
    <string name="sec_name">sec name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="img_profile">Profile</string>
</resources>