<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item android:id="@+id/search"
            android:title="@string/search"
            android:icon = "@drawable/baseline_search_24"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|always" />

        <item
            android:id="@+id/btn_favorite"
            android:title="@string/favorite"
            app:showAsAction="ifRoom"
            android:icon="@drawable/baseline_favorite_24" />

        <item
            android:id="@+id/btn_setting"
            android:title="@string/setting"
            app:showAsAction="ifRoom"
            android:icon="@drawable/baseline_settings_24" />

</menu>